--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-    <meta charset="UTF-8">
-    <title>cmd</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>cmd</title>
 <body style="background-color:rgb(0, 0, 0)">
     <style>
         div.a
