--- a/index.html
+++ b/index.html
@@ -2,35 +2,36 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <script type="text/javascript" src="script.js"></script>
+<div class="wrap">
+<div class="box"> 
+<div class="text"> 
 
-<title>cmd</title>
-  <div class="a"> 
-    <p>Microsoft Windows [Version 10.0.22621.1265]</p>
-    <p>(c) Microsoft Corporation. All rights reserved.</p>
-    <h6></h6>
-    <p>C:\Windows\System32>cd C:\links\</p>
-    <h6></h6>
-    <p>C:\links\>dir</p>
-    <p>&nbspVolume in drive C is Disc?</p>
-    <p>&nbspVolume Serial Number is 7910-95A0</p>
-    <h6></h6>
-    <p>&nbspDirectory of C:\links\</p>
-    <h6></h6>
-    <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://t.me/forditt" target="_blank">Telegram</a></p>
-    <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://discord.com/users/454702483122552832/" target="_blank">Discord</a></p>
-    <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://steamcommunity.com/id/forditt/" target="_blank">Steam</a></p>
-    <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://www.twitch.tv/forditt/" target="_blank">Twitch</a></p>
-    <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://github.com/forditt" target="_blank">GitHub</a></p>
-    <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://www.reddit.com/user/forditt_" target="_blank">Reddit</a></p>
-    <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://uk.namemc.com/profile/forditt" target="_blank">NameMC</a></p>
-    <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 0 File(s) &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 0 bytes</p>
-    <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 7 Dir(s) &nbsp28 315 406 336 bytes free</p>
-    <h6></h6>
-    <p>&nbspC:\links\>Who_am_I?</p>
-    <p>&nbsp░█▀▀░▄▀▀▄░█▀▀▄░█▀▄░░▀░░▀█▀░▀█▀</p>
-    <p>&nbsp░█▀░░█░░█░█▄▄▀░█░█░░█▀░░█░░░█░</p>
-    <p>&nbsp░▀░░░░▀▀░░▀░▀▀░▀▀░░▀▀▀░░▀░░░▀░</p>
-    <h6></h6>
-    <p>&nbspC:\links\><span id="cursor">|</span></p>
-  </div>
-</body>
+<title>cmd.exe</title>
+  <p>Microsoft Windows [Version 10.0.22621.1265]</p>
+  <p>(c) Microsoft Corporation. All rights reserved.</p>
+  <h6></h6>
+  <p>C:\Windows\System32>cd C:\links\</p>
+  <h6></h6>
+  <p>C:\links\>dir</p>
+  <p>&nbspVolume in drive C is Disc?</p>
+  <p>&nbspVolume Serial Number is 7910-95A0</p>
+  <h6></h6>
+  <p>&nbspDirectory of C:\links\</p>
+  <h6></h6>
+  <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://t.me/forditt" target="_blank">Telegram</a></p>
+  <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://discord.com/users/454702483122552832/" target="_blank">Discord</a></p>
+  <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://steamcommunity.com/id/forditt/" target="_blank">Steam</a></p>
+  <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://www.twitch.tv/forditt/" target="_blank">Twitch</a></p>
+  <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://github.com/forditt" target="_blank">GitHub</a></p>
+  <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://www.reddit.com/user/forditt_" target="_blank">Reddit</a></p>
+  <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://uk.namemc.com/profile/forditt" target="_blank">NameMC</a></p>
+  <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 0 File(s) &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 0 bytes</p>
+  <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 7 Dir(s) &nbsp28 315 406 336 bytes free</p>
+  <h6></h6>
+  <p>&nbspC:\links\>Who_am_I?</p>
+  <p>&nbsp░█▀▀░▄▀▀▄░█▀▀▄░█▀▄░░▀░░▀█▀░▀█▀</p>
+  <p>&nbsp░█▀░░█░░█░█▄▄▀░█░█░░█▀░░█░░░█░</p>
+  <p>&nbsp░▀░░░░▀▀░░▀░▀▀░▀▀░░▀▀▀░░▀░░░▀░</p>
+  <h6></h6>
+  <p>&nbspC:\links\><span id="cursor">|</span></p>
+</div>
