--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="style.css">
 <script type="text/javascript" src="script.js"></script>
-<div class="box">
-<div class="text">
 
+<div class="text-box">
 <title>cmd.exe</title>
-  <p>Microsoft Windows [Version 10.0.22621.1265]</p>
+<div class="buttons">
+  <p class="buttons-1">🗕 🗗 🗙</p>
+</div>
+  <p> Microsoft Windows [Version 10.0.22621.1265]</p>
   <p>(c) Microsoft Corporation. All rights reserved.</p>
   <h6></h6>
   <p>C:\Windows\System32>cd C:\links\</p>
