--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="style.css">
 <script type="text/javascript" src="script.js"></script>
+<title>cmd.exe</title>
 
 <div class="text-box">
-<title>cmd.exe</title>
 <div class="buttons">
   <p class="buttons-1">🗕 🗗 🗙</p>
 </div>
-  <p> Microsoft Windows [Version 10.0.22621.1265]</p>
+  <p> Microsoft Windows [Version 10.0.22621.2361]</p>
   <p>(c) Microsoft Corporation. All rights reserved.</p>
   <h6></h6>
   <p>C:\Windows\System32>cd C:\links\</p>
@@ -19,20 +19,21 @@
   <h6></h6>
   <p>&nbspDirectory of C:\links\</p>
   <h6></h6>
-  <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://t.me/forditt" target="_blank">Telegram</a></p>
-  <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://discord.com/users/454702483122552832/" target="_blank">Discord</a></p>
-  <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://steamcommunity.com/id/forditt/" target="_blank">Steam</a></p>
-  <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://www.twitch.tv/forditt/" target="_blank">Twitch</a></p>
-  <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://github.com/forditt" target="_blank">GitHub</a></p>
-  <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://www.reddit.com/user/forditt_" target="_blank">Reddit</a></p>
-  <p>13.02.2023 &nbsp21:26 &nbsp&nbsp "DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://uk.namemc.com/profile/forditt" target="_blank">NameMC</a></p>
+  <p>31.08.2023 &nbsp11:11 &nbsp&nbsp"DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://t.me/forditt" target="_blank">Telegram</a></p>
+  <p>31.08.2023 &nbsp11:11 &nbsp&nbsp"DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://discord.com/users/454702483122552832/" target="_blank">Discord</a></p>
+  <p>31.08.2023 &nbsp11:11 &nbsp&nbsp"DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://steamcommunity.com/id/forditt/" target="_blank">Steam</a></p>
+  <p>31.08.2023 &nbsp11:11 &nbsp&nbsp"DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://www.twitch.tv/forditt/" target="_blank">Twitch</a></p>
+  <p>31.08.2023 &nbsp11:11 &nbsp&nbsp"DIR" &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://github.com/forditt" target="_blank">GitHub</a></p>
   <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 0 File(s) &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 0 bytes</p>
   <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 7 Dir(s) &nbsp28 315 406 336 bytes free</p>
   <h6></h6>
-  <p>&nbspC:\links\>Who_am_I?</p>
-  <p>&nbsp░█▀▀░▄▀▀▄░█▀▀▄░█▀▄░░▀░░▀█▀░▀█▀</p>
-  <p>&nbsp░█▀░░█░░█░█▄▄▀░█░█░░█▀░░█░░░█░</p>
-  <p>&nbsp░▀░░░░▀▀░░▀░▀▀░▀▀░░▀▀▀░░▀░░░▀░</p>
+  <p>C:\links\><span id="cursor">|</span></p>
+  <p>&nbsp</p>
+  <p>&nbsp</p>
+  <p>&nbsp</p>
+  <p>&nbsp</p>
+  <p>&nbsp</p>
+  <p>&nbsp</p>
+  <p>&nbsp</p>
   <h6></h6>
-  <p>&nbspC:\links\><span id="cursor">|</span></p>
 </div>
